# particle-life

./: .gitignore  AGENTS.md  BENCHMARKS.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.html  about.hbs  about.toml
.claude/commands/: benchmark.md  cut-release.md  licenses.md  mergeback.md  release.md
.github/workflows/: ci.yml  cla.yml  release.yml
assets/presets/: Crystal.toml  Grand Chain.toml  Harlequin.toml  Loners.toml  Nebula.toml  Rings.toml  Snakes Rings Ships.toml  Snakes and Stripes.toml  Storm.toml  Swarm.toml  _template.toml
assets/themes/: Catppuccin.toml  Midnight.toml  Nord.toml
src/: app.rs  benchmark.rs  cli.rs  config.rs  icon.rs  main.rs  pipeline_cache.rs  renderer.rs  simulation.rs  ui.rs
src/shaders/: compute.wgsl  grid_count.wgsl  grid_prefix.wgsl  grid_prefix_a.wgsl  grid_prefix_b.wgsl  grid_prefix_c.wgsl  grid_reorder.wgsl  grid_scatter.wgsl  particle.wgsl
