[package]
name = "ParticleLife"
version = "0.6.0"
edition = "2024"
authors = ["Brandon Bisel <brandonbisel@gmail.com>"]
license = "MIT"
description = "GPU-accelerated particle life simulator with emergent flocking and clustering behaviour"
repository = "https://github.com/brandonbisel/particle-life"

[dependencies]
winit      = "0.30"
wgpu       = "24"
egui       = "0.31"
egui-winit = "0.31"
egui-wgpu  = "0.31"
log        = "0.4"
env_logger = "0.11"
bytemuck   = { version = "1", features = ["derive"] }
pollster   = "0.3"
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"
rfd        = "0.15"
egui-phosphor = "0.9.0"
png = "0.17"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
open = "5"

[profile.release]
lto = "thin"
codegen-units = 1
